--- a/StudentManagement/StudentManagement/appsettings.json
+++ b/StudentManagement/StudentManagement/appsettings.json
@@ -1,10 +1,11 @@
 {
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
+  "MyKey": "appsetting.json MyKey"
 
-
+    // 支付宝的密钥 微信的密钥
 }
