--- a/StudentManagement/StudentManagement/Properties/launchSettings.json
+++ b/StudentManagement/StudentManagement/Properties/launchSettings.json
@@ -12,15 +12,19 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "MyKey": "appsetting.launchSetting.json MyKey "
+      },
+    
+
     },
     "StudentManagement": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "MyKey": "appsetting.launchSetting.json MyKey "
       }
     }
   }
