--- a/StudentManagement/StudentManagement/appsettings.Development.json
+++ b/StudentManagement/StudentManagement/appsettings.Development.json
@@ -5,5 +5,6 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "MyKey": "appsetting.Development.json MyKey "
 }
