环境变量的内容。

--- a/StudentManagement/StudentManagement/Properties/launchSettings.json
+++ b/StudentManagement/StudentManagement/Properties/launchSettings.json
@@ -13,6 +13,7 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
+        // "ASPNETCORE_ENVIRONMENT": "Staging",
         "MyKey": "appsetting.launchSetting.json MyKey "
       },
     
