添加迁移文件和补充初始化数据信息。

--- a/src/new/StudentManage/appsettings.json
+++ b/src/new/StudentManage/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "StudentDBConnection": "server=(localdb)\\MSSQLLocalDB;database=StudentDB;Trusted_Connection=true"
+  },
   "AllowedHosts": "*"
 }
