--- a/src/new/StudentManage/StudentManagement.csproj
+++ b/src/new/StudentManage/StudentManagement.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AppDbData\" />
+  </ItemGroup>
+
 </Project>
