完成 Entity Framework Core 中使用 Sql server

--- a/StudentManagement/StudentManagement/appsettings.json
+++ b/StudentManagement/StudentManagement/appsettings.json
@@ -5,7 +5,13 @@
       "Default": "Warning"
     }
   },
-  "MyKey": "appsetting.json MyKey"
+  "MyKey": "appsetting.json MyKey",
+  
+    "ConnetionsStrings": {
+      "StudentDBConnection": "server=(localdb)\\MSSQLLocalDB;database=StudentDB;Trusted_Connection=true"
+
+    }
+ 
 
     // 支付宝的密钥 微信的密钥
 }
