--- a/StudentManagement/StudentManagement/appsettings.json
+++ b/StudentManagement/StudentManagement/appsettings.json
@@ -6,12 +6,12 @@
     }
   },
   "MyKey": "appsetting.json MyKey",
+
+  "ConnectionStrings": {
+    "StudentDBConnection": "server=(localdb)\\MSSQLLocalDB;database=StudentDB;Trusted_Connection=true"
+
+  }
+
   
-    "ConnetionsStrings": {
-      "StudentDBConnection": "server=(localdb)\\MSSQLLocalDB;database=StudentDB;Trusted_Connection=true"
-
-    }
- 
-
-    // 支付宝的密钥 微信的密钥
+  // 支付宝的密钥 微信的密钥
 }
