完成编辑学生功能。

--- a/src/new/StudentManage/appsettings.json
+++ b/src/new/StudentManage/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionStrings": {
-    "StudentDBConnection": "server=(localdb)\\MSSQLLocalDB;database=StudentDB;Trusted_Connection=true"
+    "StudentDBConnection": "server=(localdb)\\MSSQLLocalDB;database=StudentDB-dev;Trusted_Connection=true"
   },
   "AllowedHosts": "*"
 }
