--- a/StudentManagement/StudentManagement/Properties/launchSettings.json
+++ b/StudentManagement/StudentManagement/Properties/launchSettings.json
@@ -12,8 +12,8 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        //"ASPNETCORE_ENVIRONMENT": "Development",
-         "ASPNETCORE_ENVIRONMENT": "Staging",
+       // "ASPNETCORE_ENVIRONMENT": "Development",
+         "ASPNETCORE_ENVIRONMENT": "Production",
         "MyKey": "appsetting.launchSetting.json MyKey "
       },
     
