日志记录异常信息。

--- a/src/new/StudentManage/appsettings.json
+++ b/src/new/StudentManage/appsettings.json
@@ -1,7 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Warning",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
   "ConnectionStrings": {
