完成日志功能。

--- a/src/new/StudentManage/appsettings.json
+++ b/src/new/StudentManage/appsettings.json
@@ -1,9 +1,23 @@
 {
   "Logging": {
+    "Debug": {
+      "LogLevel": {
+        "Default": "Trace",
+        "StudentManagement.Controllers.HomeController": "Warning",
+
+        "StudentManagement.Models.SQLStudentRepository": "Warning",
+
+        "Microsoft": "Warning"
+      }
+    },
+
     "LogLevel": {
-      "Default": "Warning",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Trace",
+      "StudentManagement.Controllers.HomeController": "Trace",
+
+      "StudentManagement.Models.SQLStudentRepository": "Trace",
+
+      "Microsoft": "Trace"
     }
   },
   "ConnectionStrings": {
