--- a/StudentManagement/StudentManagement/appsettings.json
+++ b/StudentManagement/StudentManagement/appsettings.json
@@ -2,7 +2,8 @@
   "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Warning",
+      "Microsoft": "Warning"
     }
   },
   "MyKey": "appsetting.json MyKey",
