完成日志过滤等级的内容。

--- a/StudentManagement/StudentManagement/appsettings.json
+++ b/StudentManagement/StudentManagement/appsettings.json
@@ -1,9 +1,19 @@
 {
   "AllowedHosts": "*",
   "Logging": {
+    "Debug": {
+      "LogLevel": {
+        "Default": "Warning",
+        "StudentManagement.Controllers.HomeController": "Warning",
+        "StudentManagement.Models.SQLStudentRepository": "Warning",
+        "Microsoft": "Warning"
+      }
+    },
     "LogLevel": {
-      "Default": "Warning",
-      "Microsoft": "Warning"
+      "Default": "Trace",
+      "StudentManagement.Controllers.HomeController": "Trace",
+      "StudentManagement.Models.SQLStudentRepository": "Trace",
+      "Microsoft": "Trace"
     }
   },
   "MyKey": "appsetting.json MyKey",
