更新身份认证功能。

--- a/src/new/StudentManage/appsettings.json
+++ b/src/new/StudentManage/appsettings.json
@@ -2,11 +2,9 @@
   "Logging": {
     "Debug": {
       "LogLevel": {
-        "Default": "Trace",
-        "StudentManagement.Controllers.HomeController": "Warning",
-
-        "StudentManagement.Models.SQLStudentRepository": "Warning",
-
+        "Default": "Warning",
+        "StudentManagement.Controllers.HomeController": "Trace",
+        "StudentManagement.Models.SQLEmployeeRepository": "Error",
         "Microsoft": "Warning"
       }
     },
@@ -14,9 +12,7 @@
     "LogLevel": {
       "Default": "Trace",
       "StudentManagement.Controllers.HomeController": "Trace",
-
       "StudentManagement.Models.SQLStudentRepository": "Trace",
-
       "Microsoft": "Trace"
     }
   },
