补充中文提示中间件。

--- a/src/new/StudentManage/appsettings.json
+++ b/src/new/StudentManage/appsettings.json
@@ -3,17 +3,17 @@
     "Debug": {
       "LogLevel": {
         "Default": "Warning",
-        "StudentManagement.Controllers.HomeController": "Trace",
-        "StudentManagement.Models.SQLEmployeeRepository": "Error",
+        "StudentManagement.Controllers.HomeController": "Warning",
+        "StudentManagement.Models.SQLEmployeeRepository": "Warning",
         "Microsoft": "Warning"
       }
     },
 
     "LogLevel": {
-      "Default": "Trace",
-      "StudentManagement.Controllers.HomeController": "Trace",
-      "StudentManagement.Models.SQLStudentRepository": "Trace",
-      "Microsoft": "Trace"
+      "Default": "Warning",
+      "StudentManagement.Controllers.HomeController": "Warning",
+      "StudentManagement.Models.SQLStudentRepository": "Warning",
+      "Microsoft": "Warning"
     }
   },
   "ConnectionStrings": {
