完成用户的注册。以及密码强度的修改。

--- a/StudentManagement/StudentManagement/appsettings.json
+++ b/StudentManagement/StudentManagement/appsettings.json
@@ -10,10 +10,10 @@
       }
     },
     "LogLevel": {
-      "Default": "Trace",
-      "StudentManagement.Controllers.HomeController": "Trace",
-      "StudentManagement.Models.SQLStudentRepository": "Trace",
-      "Microsoft": "Trace"
+      "Default": "Warning",
+      "StudentManagement.Controllers.HomeController": "Warning",
+      "StudentManagement.Models.SQLStudentRepository": "Warning",
+      "Microsoft": "Warning"
     }
   },
   "MyKey": "appsetting.json MyKey",
