--- a/src/new/StudentManage/StudentManagement.csproj
+++ b/src/new/StudentManage/StudentManagement.csproj
@@ -6,6 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190915032524_Extend_IdentityUser.cs" />
+    <Compile Remove="Migrations\20190915032524_Extend_IdentityUser.Designer.cs" />
+    <Compile Remove="Migrations\20190915032831_Extend_IdentityUser.cs" />
+    <Compile Remove="Migrations\20190915032831_Extend_IdentityUser.Designer.cs" />
+    <Compile Remove="Migrations\20190915033302_Extend_IdentityUser.cs" />
+    <Compile Remove="Migrations\20190915033302_Extend_IdentityUser.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
