扩展 ASP.Net Core Identity 中的 User 类

--- a/StudentManagement/StudentManagement/Properties/launchSettings.json
+++ b/StudentManagement/StudentManagement/Properties/launchSettings.json
@@ -12,8 +12,8 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-      // "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_ENVIRONMENT": "Production",
+        // "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_ENVIRONMENT": "Development",
         "MyKey": "appsetting.launchSetting.json MyKey "
       },
     
