完成种子数据功能的添加和处理。

--- a/StudentManagement/StudentManagement/appsettings.json
+++ b/StudentManagement/StudentManagement/appsettings.json
@@ -19,10 +19,10 @@
   "MyKey": "appsetting.json MyKey",
 
   "ConnectionStrings": {
-    "StudentDBConnection": "server=(localdb)\\MSSQLLocalDB;database=StudentDB;Trusted_Connection=true"
+    "StudentDBConnection": "server=(localdb)\\MSSQLLocalDB;database=StudentDB1;Trusted_Connection=true"
 
   }
 
   
-  // Ö§¸¶±¦µÄÃÜÔ¿ Î¢ĞÅµÄÃÜÔ¿
+  // æ”¯ä»˜å®çš„å¯†é’¥ å¾®ä¿¡çš„å¯†é’¥
 }
