--- a/StudentManagement/StudentManagement/appsettings.Development.json
+++ b/StudentManagement/StudentManagement/appsettings.Development.json
@@ -1,20 +1,34 @@
 {
- 
 
+  
+    "Authentication": {
+      "Microsoft": {
+        "ClientId": "1",
+        "ClientSecret": "1"
+      },
+      "Github": {
+
+        "ClientId": "1",
+        "ClientSecret": "1"
+      }
+    },
+
+
+ 
   "Logging": {
     "Debug": {
       "LogLevel": {
-        "Default": "Error",
+        "Default": "Warning",
         "StudentManagement.Controllers.HomeController": "Error",
         "StudentManagement.Models.SQLStudentRepository": "Error",
-        "Microsoft": "Error"
+        "Microsoft": "Warning"
       }
     },
     "LogLevel": {
-      "Default": "Error",
+      "Default": "Warning",
       "StudentManagement.Controllers.HomeController": "Error",
       "StudentManagement.Models.SQLStudentRepository": "Error",
-      "Microsoft": "Error"
+      "Microsoft": "Warning"
     }
   },
 
