补充代码到110章节。

--- a/StudentManagement/StudentManagement/StudentManagement.csproj
+++ b/StudentManagement/StudentManagement/StudentManagement.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <!--<AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>-->
   <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
+  <UserSecretsId>fcab2e64-11c3-498d-bf3f-30ca4dd0d391</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,6 +19,7 @@
  
 
   <ItemGroup>
+    <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
