--- a/StudentManagement/StudentManagement/appsettings.Development.json
+++ b/StudentManagement/StudentManagement/appsettings.Development.json
@@ -4,17 +4,17 @@
   "Logging": {
     "Debug": {
       "LogLevel": {
-        "Default": "Error",
+        "Default": "Warning",
         "StudentManagement.Controllers.HomeController": "Error",
         "StudentManagement.Models.SQLStudentRepository": "Error",
-        "Microsoft": "Error"
+        "Microsoft": "Warning"
       }
     },
     "LogLevel": {
-      "Default": "Error",
+      "Default": "Warning",
       "StudentManagement.Controllers.HomeController": "Error",
       "StudentManagement.Models.SQLStudentRepository": "Error",
-      "Microsoft": "Error"
+      "Microsoft": "Warning"
     }
   },
 
