--- a/StudentManagement/StudentManagement/appsettings.json
+++ b/StudentManagement/StudentManagement/appsettings.json
@@ -21,8 +21,19 @@
   "ConnectionStrings": {
     "StudentDBConnection": "server=(localdb)\\MSSQLLocalDB;database=StudentDB;Trusted_Connection=true"
 
+  },
+  "Authentication": {
+    "Microsoft": {
+      "ClientId": "e0701b0f-f16f-423b-9555-6f1fcf08b714",
+      "ClientSecret": "h0-4TtYFLw_~~1R3n2_F4O0~Z6dtG4Y43g"
+    },
+    "GitHub": {
+      "ClientId": "cb39e5c47aeb1156f7fa",
+      "ClientSecret": "385666f6d711c3431beb47d987ed36a418fe8fa1"
+    }
+
   }
 
-  
+
   // 支付宝的密钥 微信的密钥
 }
