--- a/RazorPages/StudentManagement.RazorPage/StudentManagement.RazorPage.csproj
+++ b/RazorPages/StudentManagement.RazorPage/StudentManagement.RazorPage.csproj
@@ -4,8 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
-	<ItemGroup>
-		<!--<PackageReference Include="Microsoft.AspNetCore.Mvc.DataAnnotations" Version="2.2.0" />-->
+	<ItemGroup><!--<PackageReference Include="Microsoft.AspNetCore.Mvc.DataAnnotations" Version="2.2.0" />-->
+	
+	  <Folder Include="ViewComponents\" />
 	</ItemGroup>
 
   <ItemGroup>
