--- a/RazorPages/StudentManagement.RazorPage.Services/StudentManagement.RazorPage.Services.csproj
+++ b/RazorPages/StudentManagement.RazorPage.Services/StudentManagement.RazorPage.Services.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
+
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\StudentManagement.RazorPage.Models\StudentManagement.RazorPage.Models.csproj" />
   </ItemGroup>
 
