--- a/RazorPages/StudentManagement.RazorPage/appsettings.Development.json
+++ b/RazorPages/StudentManagement.RazorPage/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "StudentDBConnection": "server=(localdb)\\MSSQLLocalDB;database=StudentRazorDB;Integrated Security=true"
   }
-}
+  }
