--- a/StudentManagement/StudentManagement/appsettings.json
+++ b/StudentManagement/StudentManagement/appsettings.json
@@ -19,7 +19,7 @@
   "MyKey": "appsetting.json MyKey",
 
   "ConnectionStrings": {
-    "StudentDBConnection": "server=(localdb)\\MSSQLLocalDB;database=StudentDB;Trusted_Connection=true"
+    "StudentDBConnection": "server=(localdb)\\MSSQLLocalDB;database=StudentDB;Trusted_Connection=true;MultipleActiveResultSets=True"
 
   },
   "Authentication": {
@@ -35,5 +35,5 @@
   }
 
 
-  // Ö§¸¶±¦µÄÃÜÔ¿ Î¢ĞÅµÄÃÜÔ¿
+  // æ”¯ä»˜å®çš„å¯†é’¥ å¾®ä¿¡çš„å¯†é’¥
 }
